src/components/Header.module.scss
@use "../index.scss";

.header
{
	display: flex;
	flex-flow: row nowrap;
	align-items: center;
	height: index.$input-main-height + index.$row-padding + index.$row-padding;
	background: rgba(180, 180, 180, 1);
}

.load
{
	@extend %input-main;
	margin: index.$row-padding 0px index.$row-padding index.$row-padding;
}

.select
{
	width: 250px;
	margin: index.$row-padding 0px index.$row-padding 14px;
}

